# scikit-bot

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  world_gen.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
doc/source/: api_reference.rst  conf.py  examples.rst  index.rst  install.rst
doc/source/_templates/: sdformat_element.rst  sdformat_model.rst  transform_class.rst
examples/: README.rst  plot_hexagonal_grids.py  plot_sdformat-read-write.py  sdformat-read-write.py
ropy/ignition/: __init__.py  fuel.py  subscriber.py  transformations.py
ropy/ignition/sdformat/: __init__.py  create_frame_graph.py  sdformat.py
ropy/ignition/sdformat/bindings/v10/: actor.py  collision.py  geometry.py  joint.py  light.py  link.py  model.py  physics.py  scene.py  sensor.py  state.py  visual.py  world.py
ropy/ignition/sdformat/bindings/v12/: actor.py  collision.py  geometry.py  joint.py  light.py  link.py  model.py  physics.py  scene.py  sensor.py  state.py  visual.py  world.py
ropy/ignition/sdformat/bindings/v13/: __init__.py  actor.py  collision.py  geometry.py  joint.py  light.py  link.py  model.py  physics.py  scene.py  sdf.py  sensor.py  state.py  visual.py  world.py
ropy/ignition/sdformat/bindings/v14/: actor.py  collision.py  geometry.py  joint.py  light.py  link.py  model.py  physics.py  scene.py  sdf.py  sensor.py  state.py  visual.py  world.py
ropy/ignition/sdformat/bindings/v15/: actor.py  audio_sink_type.py  audio_source_type.py  box_shape.py  box_shape_type.py  camera_type.py  collision.py  frame_type.py  geometry.py  gui_type.py  heightmap_shape_type.py  imu.py  imu_type.py  inertial_type.py  joint.py  joint_type.py  light.py  light_type.py  link.py  logical_camera_type.py  material.py  material_type.py  model.py  noise_type.py  physics.py  physics_type.py  polyline_shape_type.py  population.py  population_type.py  pose_type.py  projector_type.py  rfid_type.py  rfidtag.py  root_type.py  scene.py  sdf.py  sensor.py  sensor_type.py  sonar_type.py  spherical_coordinates_type.py  (+6 more)
ropy/ignition/sdformat/bindings/v16/: __init__.py  actor.py  actor_type.py  altimeter.py  audio_source_type.py  camera_type.py  collision.py  contact.py  geometry.py  gps.py  gripper.py  gripper_type.py  imu_type.py  link.py  (+31 more)
ropy/ignition/sdformat/models/: sdfdom.py
ropy/ignition/tests/: test_subscriber.py
ropy/ros/: __init__.py
ropy/ros/generic/: __init__.py  urdf.py
ropy/trajectory/: __init__.py  linear.py  spline.py  utils.py
ropy/trajectory/tests/: test_linear.py  test_spline.py
ropy/transform/: __init__.py  _utils.py  affine.py  base.py  coordinates.py  functions.py  projections.py  utils3d.py
ropy/transform/tests/: test_affine.py  test_base.py  test_coodinates.py  test_functions.py  test_projections.py  test_utils.py
skbot/: __init__.py  _numba_overloads.py
skbot/ignition/: __init__.py  fuel.py  messages.py  subscriber.py  transformations.py
skbot/ignition/sdformat/: __init__.py  _graph.py  create_frame_graph.py  exceptions.py  load_as_generic.py  sdformat.py  tf_from_sdf.py  transform_factory.py
skbot/ignition/sdformat/_transform_factory/: __init__.py  factory.py  generic.py  graph.py  links.py  scopes.py  v15.py  v17.py  v18.py
skbot/ignition/sdformat/generic_sdf/: __init__.py  actor.py  air_pressure.py  altimeter.py  atmosphere.py  audio_sink.py  audio_source.py  base.py  battery.py  box_shape.py  camera.py  capsule_shape.py  collision.py  collision_engine.py  contact.py  cylinder_shape.py  ellipsoid_shape.py  forcetorque.py  frame.py  geometry.py  gps.py  gripper.py  gui.py  heightmap_shape.py  image_shape.py  imu.py  include.py  inertial.py  joint.py  lidar.py  light.py  light_state.py  link.py  link_state.py  logical_camera.py  magnetometer.py  material.py  mesh_shape.py  model.py  model_state.py  (+26 more)
skbot/inverse_kinematics/: __init__.py  cyclic_coordinate_descent.py  gradient_descent.py  targets.py  types.py
skbot/ros/generic/: urdf.py
skbot/trajectory/: __init__.py  linear.py  spline.py  utils.py
skbot/transform/: __init__.py  _utils.py  affine.py  base.py  functions.py  joints.py  metrics.py  projections.py  simplfy.py  utils2d.py  utils3d.py
tests/ignition/: conftest.py  test_create_frame_graph.py  test_fuel.py  test_sdformat.py  test_subscriber.py  test_transform_factory.py  test_transformations.py  test_world.py
tests/ignition/sdf/: invalid_version.sdf  light.sdf  panda_world.sdf  world_with_state.sdf
tests/ignition/sdf/sdformat/: audio_14.sdf  model_multi_nested_model.sdf  model_nested_static_model.sdf
tests/ignition/sdf/v15/: camera.sdf  force_torque.sdf  frames.sdf  joint_attached_to_parent.sdf  light_only.sdf  population.sdf  pose_testing.sdf  projector.sdf
tests/ignition/sdf/v17/: crooked_double_pendulum.sdf  environment.sdf  fuel_include.sdf  light_only.sdf  population.sdf
tests/ignition/sdf/v18/: audio_source.sdf  camera.sdf  complete_world.sdf  crooked_double_pendulum.sdf  double_pendulum.sdf  four_goals.sdf  fuel_include.sdf  fuel_include_no_pose.sdf  fuel_include_placement_frame.sdf  fuel_include_relative_to.sdf  fuel_include_rename.sdf  fuel_include_unknown_server.sdf  fuel_include_world.sdf  gripper.sdf  invalid_joint_type.sdf  invalid_same_scope_twice.sdf  invalid_sensor_type.sdf  light_only.sdf  link_offset.sdf  panda_cam.sdf  perspective_transform.sdf  perspective_transform_offset.sdf  perspective_transform_straight.sdf  population.sdf  pose_relative_to.sdf  pose_testing.sdf  projector.sdf  world_with_state.sdf
tests/inverse_kinematics/: conftest.py  test_ccd.py  test_gd.py  test_targets.py
tests/ros/: conftest.py  test_urdf.py
tests/trajectory/: test_linear.py  test_spline.py  test_trajectory_utils.py
tests/transform/: conftest.py  test_affine.py  test_base.py  test_coodinates.py  test_functions.py  test_joints.py  test_projections.py  test_simplify_link.py  test_transform_utils.py  test_utils.py  test_utils2d.py  test_utils3d.py
tools/ignition/: generate_bindings.py  generate_sdf_bindings.py  generate_xsd_schema.py  sdf_bindings_config.xml
(+672 files in other folders)
