[metadata]
name = ropy
version = attr: ropy.__version__
description = "A collection of functions useful for working with robots."
long_description = file: Readme.md
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Framework :: Robot Framework :: Library

[options]
packages = find:
install_requires =
    numpy >= 1.19.5

[options.extras_require]
ignition =
    pyzmq >= 22.0.3
docs = 
    sphinx
    numpydoc
    sphinx-autodoc-typehints

